Fix font on small screens

--- a/style.css
+++ b/style.css
@@ -93,4 +93,8 @@ ul {
 		width: 100%;
 	}
 	
+
+    .hello {
+        font-size: 4.0vw;
+    }
 }
